[package]
authors = ["Dan Crank <danno@danno.org>"]
edition = "2018"
readme = "README.md"
name = "red-rover"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
feather_m4 = "0.10"
#feather_m4 = { version = "0.10", features = ["dma"] }
atsamd-hal = "0.15.1"
usb-device = "0.2"
usbd-serial = "0.1"
#cortex-m-semihosting = "0.3.3"
panic-halt = "0.2"
#panic-semihosting = "0.5"
core2 = "0.4.0"
#heapless = "0.7"

# neopixel support
smart-leds = "0.3"
smart-leds-trait = "0.2"
ws2812-timer-delay = "0.3"

# OLED FeatherWing support
#sh1106 = "0.3.4"
#sh1107 = { git = "https://github.com/aaron-hardin/sh1107" }
sh1107 = { git = "https://github.com/DanCrank/sh1107" }
#sh1107 = { path = "../sh1107" }
embedded-graphics = "0.6"        # aaron-hardin/sh1107 needs older version
#embedded-graphics = "0.7"

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = true

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "s"

# this lets you use `cargo fix`!
[[bin]]
name = "red-rover"
test = false
bench = false
